[gd_scene load_steps=23 format=2]

[ext_resource path="res://Kenney High.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scenes/main.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/SFX_alert3.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/timer_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/checkmark.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/right.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/SFX_alert1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/textures/stop.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/gear.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/UI_Animate_Bright_Whistle_Disappear_stereo.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/UI_Animate_Bright_Whistle_Appear_stereo.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/BUTTON_Click_Jigsaw_Crop_02_stereo.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/BUTTON_Plastic_Light_Switch_Off_mono.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/BUTTON_Click_Electric_Sander_Faded_01_stereo.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 175
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 66
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
SpinBox/fonts/SpinBox = SubResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Main" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.494118, 0.65098, 1 )
script = ExtResource( 2 )
session_color = Color( 1, 0.647059, 0.647059, 1 )
break_color = Color( 0.360784, 0.588235, 0.619608, 1 )
default_color = Color( 0.239216, 0.494118, 0.65098, 1 )
not_started_text = "Let's start!"
session_text = "Time to work."
short_break_text = "Take a break!"
long_break_text = "Let's relax. :)"
session_finished_sound = ExtResource( 7 )
break_finished_sound = ExtResource( 3 )
show_settings_sound = ExtResource( 11 )
hide_settings_sound = ExtResource( 10 )
start_timer_sound = ExtResource( 14 )
pause_timer_sound = ExtResource( 12 )
reset_timer_sound = ExtResource( 13 )

[node name="SessionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -278.0
margin_top = 32.0
margin_right = 278.0
margin_bottom = 99.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -267.797
margin_right = 184.0
margin_bottom = 92.2031
max_value = 60.0
value = 60.0
texture_progress = ExtResource( 4 )
fill_mode = 5
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -100.0
margin_right = 148.0
margin_bottom = 88.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "25:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPauseButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -236.0
margin_right = -20.0
margin_bottom = -130.0
focus_mode = 0
icon = ExtResource( 6 )
flat = true
icon_align = 2
expand_icon = true

[node name="StopButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -236.0
margin_bottom = -130.0
focus_mode = 0
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="SettingsButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -146.0
margin_bottom = -40.0
focus_mode = 0
icon = ExtResource( 9 )
flat = true
icon_align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0
color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="GridContainer" type="GridContainer" parent="Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.0
margin_top = 75.0
margin_right = 201.0
grow_horizontal = 2

[node name="SettingsLabel" type="Label" parent="Settings/GridContainer"]
margin_right = 402.0
margin_bottom = 88.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="SessionLengthLabel" type="Label" parent="Settings/GridContainer"]
margin_top = 92.0
margin_right = 402.0
margin_bottom = 159.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "Session Time"
align = 1
valign = 1

[node name="SessionTime" type="SpinBox" parent="Settings/GridContainer"]
margin_top = 163.0
margin_right = 402.0
margin_bottom = 232.0
input_pass_on_modal_close_click = false
theme = SubResource( 6 )
max_value = 120.0
value = 25.0
align = 1
suffix = "min."

[node name="ShortBreakLengthLabel" type="Label" parent="Settings/GridContainer"]
margin_top = 236.0
margin_right = 402.0
margin_bottom = 303.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "Short Break Time"
align = 1
valign = 1

[node name="ShortSessionTime" type="SpinBox" parent="Settings/GridContainer"]
margin_top = 307.0
margin_right = 402.0
margin_bottom = 376.0
theme = SubResource( 6 )
max_value = 30.0
value = 5.0
align = 1
suffix = "Min."

[node name="LongBreakLengthLabel" type="Label" parent="Settings/GridContainer"]
margin_top = 380.0
margin_right = 402.0
margin_bottom = 447.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "Long Break Time"
align = 1
valign = 1

[node name="LongSessionTime" type="SpinBox" parent="Settings/GridContainer"]
margin_top = 451.0
margin_right = 402.0
margin_bottom = 520.0
theme = SubResource( 6 )
max_value = 60.0
value = 15.0
align = 1
suffix = "Min."

[node name="ReturnButton" type="Button" parent="Settings/GridContainer"]
margin_top = 524.0
margin_right = 402.0
margin_bottom = 624.0
rect_min_size = Vector2( 100, 100 )
focus_mode = 0
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Settings"]
playback_speed = 2.0
anims/hide = SubResource( 7 )
anims/show = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="PlayPauseButton" to="." method="_on_PlayPauseButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Settings/GridContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
